--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             type="submit"
             value="Add Course"
             class="btn btn-outline-secondary mt-3"
-            id="click"
+            id="add"
           />
           <button class="btn btn-outline-secondary mt-3" type="reset">
             clear
@@ -129,6 +129,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <!-- custom js file -->
-    <script src="main.js"></script>
+    <script src="assests/js/main.js"></script>
   </body>
 </html>
