display data in table

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           >
             delete all
           </button>
-          <tbody id="data"></tbody>
+          <tbody id="table"></tbody>
         </table>
       </div>
     </div>
