added update function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <input
               class="inputs form-control"
               type="text"
-              placeholder="cource name"
+              placeholder="course name"
               id="courseName"
             />
           </div>
@@ -46,7 +46,7 @@
           <input
             class="inputs form-control"
             type="text"
-            placeholder="cource category"
+            placeholder="course category"
             id="courseCategory"
           />
 
@@ -54,7 +54,7 @@
           <input
             class="inputs form-control"
             type="number"
-            placeholder="cource price"
+            placeholder="course price"
             id="coursePrice"
           />
 
@@ -69,7 +69,7 @@
           <input
             class="inputs form-control"
             type="number"
-            placeholder="cource capacity"
+            placeholder="course capacity"
             id="courseCapacity"
           />
 
