--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
       <div class="container">
         <h1>CRUD System</h1>
         <form>
-          <div class="mb-3">
-            <label for="">course name</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              placeholder="course name"
-              id="courseName"
-            />
+          <label for="">course name <span class="text-danger">*</span></label>
+          <input
+            class="inputs form-control"
+            type="text"
+            placeholder="course name"
+            id="courseName"
+          />
+          <div class="text-danger d-none small" id="nameAlert">
+            * first letter should be capital , 3-10 letters , No numbers
           </div>
+
           <label for="">course category</label>
           <input
             class="inputs form-control"
@@ -49,6 +51,9 @@
             placeholder="course category"
             id="courseCategory"
           />
+          <div class="text-danger d-none small" id="categoryAlert">
+            * first letter only should be capital , 3-20 letters , No numbers
+          </div>
 
           <label for="">course price</label>
           <input
@@ -57,6 +62,9 @@
             placeholder="course price"
             id="coursePrice"
           />
+          <div class="text-danger d-none small" id="priceAlert">
+            * 3 Digits only
+          </div>
 
           <label for="">course description</label>
           <textarea
@@ -64,6 +72,9 @@
             placeholder="course description"
             id="courseDescription"
           ></textarea>
+          <div class="text-danger d-none small" id="descriptionAlert">
+            * Maximum 120 character
+          </div>
 
           <label for="">course capacity</label>
           <input
@@ -72,14 +83,22 @@
             placeholder="course capacity"
             id="courseCapacity"
           />
+          <div class="text-danger d-none small" id="capacityAlert">
+            * 1-3 Digits only
+          </div>
 
           <input
             type="submit"
             value="Add Course"
             class="btn btn-outline-secondary mt-3"
             id="add"
+            disabled
           />
-          <button class="btn btn-outline-secondary mt-3" type="reset">
+          <button
+            class="btn btn-outline-secondary mt-3"
+            id="clearbtn"
+            type="reset"
+          >
             clear
           </button>
         </form>
